DeploymentConfig.yml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: myspringapp
spec:
  replicas: 1
  selector:
    app: myspringapp
  template:
    metadata:
      labels:
        app: myspringapp
    spec:
      containers:
        - name: myspringapp
          image: 'myspringapp:latest'
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 2
            periodSeconds: 1
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 1
