Service.yaml
 apiVersion: v1
kind: Service
metadata:
  name: myspringapp
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: myspringapp
