Route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: myspringapp
spec:
  to:
    kind: Service
    name: myspringapp
  port:
    targetPort: 8080
